update case study

--- a/Index.html
+++ b/Index.html
@@ -18,8 +18,11 @@
     <audio autoplay loop>
         <source src="audio/racing.mp3" type="audio/mp3">
     </audio>
-    <canvas id = "myCanvas"  height="600px" width="350px" style="border: 1px solid black">
-        Trình duyệt của bạn không hỗ trợ thẻ canvas trong HTML5</canvas>
+    <div style="margin: auto">
+        <canvas id = "myCanvas"  height="600px" width="350px" style="border: 1px solid black">
+            Trình duyệt của bạn không hỗ trợ thẻ canvas trong HTML5</canvas>
+    </div>
+
 
     <script src="JS/Const.js"></script>
     <script src="JS/car.js"></script>
